fixed up the truncate filter and cleaned up the index - item nav

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -129,6 +129,7 @@ span.close {
 
 
 .news {
+  cursor:pointer;
   padding:20px;
   border:solid 1px #ccc;
   margin-bottom:10px;
